Feat(be): Add wifi station connect endpoint
